--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.1",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "formik": "^2.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-next": "^0.0.1",
     "react-scripts": "3.4.3",
+    "typescript": "^4.0.3",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -36,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.3",
+    "@types/yup": "^0.29.7",
+    "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^1.1.0"
   }
 }
