added mobx react demo file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "declaration": false,
     "removeComments": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noUnusedLocals": false,
     "strict": false,
     "outDir": "dist",
