--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "formik": "^2.1.5",
+    "mobx": "^5.15.7",
+    "mobx-react-lite": "^2.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
